--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
 p {color: red}
+header {text-align: center;}
+nav {background-color: orange;}
+.title5 {font-size: large;}
+.section {font-size: large;}
