--- a/style.css
+++ b/style.css
@@ -2,4 +2,4 @@ p {color: red}
 header {text-align: center;}
 nav {background-color: orange;}
 .title5 {font-size: large;}
-.section {font-size: large;}
+.section {font-size: larger;}
