added margin to container

--- a/style.css
+++ b/style.css
@@ -9,3 +9,4 @@ hr {
     background-color: #098fc4;
     border: none;
  }
+ .container{align-items: center; margin-left: 300px; margin-right: 300px ;}
