added header styling

--- a/style.css
+++ b/style.css
@@ -10,4 +10,4 @@ hr {
     border: none;
  }
  .container{align-items: center; width: 50vw; margin-right: auto; margin-left: auto;}
- header {align-items: center; width:50%}
+ header {align-items: center; width:50vw}
